--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <header>
       <nav class="navigation container">
         <nav class="left_blok">
-          <a href="#"
-            ><button><img src="./img/Logo1.png" alt="Logo" /></button
-          ></a>
+          <a href="#"><img src="./img/Logo1.png" alt="Logo" /></a>
           <button class="search">
             <img src="img/Forma 1.png" alt="search" />
           </button>
@@ -35,9 +33,9 @@
         </div>
       </section>
       <section class="cart_blok1 container">
-        <div class="content-cart_blok1">
+        <div class="content-cart_blok">
           <img src="img/cart1.png" alt="cart1" />
-          <div class="content-cart_blok1_1">
+          <div class="content-cart_blok1">
             <img src="img/cart1(1).png" alt="cart1(1)" />
           </div>
           <div class="img_text">
@@ -47,9 +45,9 @@
             </h3>
           </div>
         </div>
-        <div class="content-cart_blok2">
+        <div class="content-cart_blok">
           <img src="img/cart2.png" alt="cart2" />
-          <div class="content-cart_blok2_2">
+          <div class="content-cart_blok1">
             <img src="img/cart1(1).png" alt="cart1(1)" />
           </div>
           <div class="img_text">
@@ -59,9 +57,9 @@
             </h3>
           </div>
         </div>
-        <div class="content-cart_blok3">
+        <div class="content-cart_blok">
           <img src="img/cart3.png" alt="cart3" />
-          <div class="content-cart_blok3_3">
+          <div class="content-cart_blok1">
             <img src="img/cart1(1).png" alt="cart1(1)" />
           </div>
           <div class="img_text">
@@ -87,7 +85,7 @@
       <section class="cart_blok2">
         <h1>Fetured Items</h1>
         <p>Shop for items based on what we featured in this week</p>
-        <div class="carts">
+        <div class="carts container">
           <div class="cart">
             <img src="img/cart5.png" alt="cart5" />
             <div class="carts_text">
@@ -165,72 +163,6 @@
       <div class="bottom_button">
         <button>Browse All Product</button>
       </div>
-
-      <!-- <article> -->
-      <!-- <div class="logos container">
-          <img src="img/logo1.png" alt="Logo 1" />
-          <img src="img/logo2.png" alt="Logo 2" />
-          <img src="img/logo3.png" alt="Logo 3" />
-          <img src="img/logo4.png" alt="Logo 4" />
-        </div> -->
-      <!-- </article>
-      <section class="cards-list">
-        <div class="cards-list_wrapper container">
-          <div class="card">
-            <img src="img/welcome- 1.png" alt="welcome-1" />
-            <h3>Expert Prespective Agency Awards</h3>
-            <p>
-              Lorem ipsum is placeholder text commonly used in print, and
-              publishing industries for previewing layouts and visual mockups.
-            </p>
-          </div>
-          <div class="card">
-            <img src="img/welcome- 2.png" alt="welcome-2" />
-            <h3>Business Prespective Global Agency Awards</h3>
-            <p>
-              Lorem ipsum is placeholder text commonly used in print, and
-              publishing industries for previewing layouts and visual mockups.
-            </p>
-          </div>
-          <div class="card">
-            <img src="img/welcome-3.png" alt="welcome-3" />
-            <h3>Value for Results in Global Agency Awards</h3>
-            <p>
-              Lorem ipsum is placeholder text commonly used in print, and
-              publishing industries for previewing layouts and visual mockups.
-            </p>
-          </div>
-          <div class="card card_big">
-            <img src="img/welcome-4.png" alt="welcome-4" />
-            <h3>
-              In print, and publishing industries for previewing layouts and
-              visual mockups.
-            </h3>
-            <p>
-              Lorem ipsum is placeholder text commonly used in print, and
-              publishing industries for previewing layouts and visual mockups.
-              Lorem ipsum is placeholder text commonly used in print, and
-              publishing industries for previewing layouts and visual mockups.
-              Lorem ipsum is placeholder text commonly used in print, and
-              publishing industries for previewing layouts and visual mockups.
-            </p>
-          </div>
-          <div class="card">
-            <img src="img/welcome-5.png" alt="welcome-5" />
-            <h3>Value for Results in Global Agency Awards</h3>
-            <p>
-              Lorem ipsum is placeholder text commonly used in print, and
-              publishing industries for previewing layouts and visual mockups.
-            </p>
-          </div>
-          <div class="card">
-            <img src="img/welcome-6.png" alt="welcome-6" />
-            <h3>Value for Results in Global Agency Awards</h3>
-            <p>
-              Lorem ipsum is placeholder text commonly used in print, and
-              publishing industries for previewing layouts and visual mockups.
-            </p>
-          </div> -->
     </main>
   </body>
 </html>
