--- a/index.html
+++ b/index.html
@@ -17,15 +17,19 @@
         </nav>
         <nav class="right_blok">
           <button><img src="img/Forma2.png" alt="menu" /></button>
-          <button><img src="img/Forma3.png" alt="private" /></button>
-          <button><img src="img/Forma4.png" alt="basket" /></button>
+          <button class="hidden">
+            <img src="img/Forma3.png" alt="private" />
+          </button>
+          <button class="hidden">
+            <img src="img/Forma4.png" alt="basket" />
+          </button>
         </nav>
       </nav>
     </header>
     <main>
       <section class="content_wraper">
         <div class="content-banner">
-          <img src="img/cart_banner.png" alt="cart_banner" />
+          <img class="hidden" src="img/cart_banner.png" alt="cart_banner" />
           <div class="banner_text">
             <h1>THE BRAND</h1>
             <h3>OF LUXERIOUS <font color="#F16D7F">FASHION</font></h3>
